feat: add admin bot with stats, health, error tracking